[gd_scene load_steps=26 format=2]

[ext_resource path="res://Assets/Sprites/Sprite/PyroPsycho.png" type="Texture" id=1]
[ext_resource path="res://Assets/Scenes/Misc/SoftCollision.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Sprites/Misc/Dust.png" type="Texture" id=3]
[ext_resource path="res://Assets/Codes/PyroPsycho.gd" type="Script" id=4]
[ext_resource path="res://Assets/Fonts/m5x7.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Assets/SFX/Footsteps.mp3" type="AudioStream" id=7]
[ext_resource path="res://Assets/SFX/Damage.mp3" type="AudioStream" id=8]
[ext_resource path="res://Assets/Sprites/Misc/LargeShadow.png" type="Texture" id=9]
[ext_resource path="res://Assets/SFX/Woosh.mp3" type="AudioStream" id=10]
[ext_resource path="res://Assets/SFX/Explosion.mp3" type="AudioStream" id=11]

[sub_resource type="Gradient" id=7]
offsets = PoolRealArray( 0, 0.552486 )
colors = PoolColorArray( 1, 1, 1, 0.588235, 1, 1, 1, 0 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 24, 12 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 144, 64 )

[sub_resource type="CircleShape2D" id=13]
radius = 64.4981

[sub_resource type="CircleShape2D" id=15]
radius = 24.0

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 192, 128 )

[sub_resource type="Animation" id=14]
resource_name = "Death"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 23, 24, 25, 26 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ), Vector2( 0, -8 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:ENABLED")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("DmgArea/Collision:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Shadow:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath(".:BUSY")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Explode:playing")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=1]
resource_name = "Hurt"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 8, 0 ), Vector2( -6, 0 ), Vector2( 4, 0 ), Vector2( -2, 0 ), Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Cloud:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:ENABLED")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath(".:BUSY")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=2]
resource_name = "Idle"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Cloud:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:offset")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:BUSY")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:ENABLED")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("DmgArea/Collision:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Shadow:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/7/type = "value"
tracks/7/path = NodePath(".:BUSY")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Explode:playing")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=4]
resource_name = "Run"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Cloud:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:offset")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Footsteps:playing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath(".:BUSY")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=5]
resource_name = "Throw Dynamite"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 11, 12, 13, 14, 15, 16, 17, 18, 17, 18 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Cloud:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:offset")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack"
} ]
}
tracks/5/type = "value"
tracks/5/path = NodePath(".:ENABLED")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Woosh:playing")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/7/type = "value"
tracks/7/path = NodePath(".:BUSY")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="DynamicFont" id=10]
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 1, 0.701961, 0.321569, 1 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.443137, 0, 0.113725, 1 )

[node name="PyroPsycho" type="KinematicBody2D" groups=["Enemy"]]
collision_layer = 4
script = ExtResource( 4 )
SPEED = 150
EXP = 85
ENABLED = false
MIN_CASH = 50
MAX_CASH = 150

[node name="Shadow" type="Sprite" parent="."]
position = Vector2( 0, 16 )
scale = Vector2( 1.5, 0.8 )
texture = ExtResource( 9 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 29

[node name="Cloud" type="CPUParticles2D" parent="."]
position = Vector2( 0, 16 )
rotation = -2.35619
emitting = false
amount = 16
lifetime = 0.5
lifetime_randomness = 0.1
texture = ExtResource( 3 )
initial_velocity = 100.0
angular_velocity = 720.0
angular_velocity_random = 1.0
scale_amount = 0.1
scale_amount_random = 0.5
color_ramp = SubResource( 7 )

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4 )
shape = SubResource( 6 )

[node name="SoftCollision" parent="." instance=ExtResource( 2 )]
visible = false

[node name="NoticeArea" type="Area2D" parent="."]
visible = false

[node name="Collision" type="CollisionShape2D" parent="NoticeArea"]
position = Vector2( 144, 0 )
shape = SubResource( 8 )

[node name="CloseArea" type="Area2D" parent="."]

[node name="Collision" type="CollisionShape2D" parent="CloseArea"]
shape = SubResource( 13 )

[node name="DmgArea" type="Area2D" parent="."]

[node name="Collision" type="CollisionShape2D" parent="DmgArea"]
shape = SubResource( 15 )
disabled = true

[node name="PlayerFinder" type="Area2D" parent="."]

[node name="Collision" type="CollisionShape2D" parent="PlayerFinder"]
shape = SubResource( 9 )

[node name="AttackPos" type="Position2D" parent="."]
position = Vector2( 16, -16 )

[node name="Animation" type="AnimationPlayer" parent="."]
playback_process_mode = 0
anims/Death = SubResource( 14 )
anims/Hurt = SubResource( 1 )
anims/Idle = SubResource( 2 )
anims/RESET = SubResource( 3 )
anims/Run = SubResource( 4 )
"anims/Throw Dynamite" = SubResource( 5 )

[node name="HPBar" type="ProgressBar" parent="."]
margin_left = -16.0
margin_top = -40.0
margin_right = 16.0
margin_bottom = -36.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 10 )
custom_styles/fg = SubResource( 11 )
custom_styles/bg = SubResource( 12 )
value = 50.0
percent_visible = false

[node name="Hurt" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -5.0
bus = "SFX"

[node name="Woosh" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -5.0
bus = "SFX"

[node name="Footsteps" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -10.0
pitch_scale = 0.8
bus = "SFX"

[node name="Explode" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -10.0
bus = "SFX"

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[connection signal="body_entered" from="NoticeArea" to="." method="_on_NoticeArea_body_entered"]
[connection signal="body_entered" from="CloseArea" to="." method="_on_CloseArea_body_entered"]
[connection signal="body_exited" from="CloseArea" to="." method="_on_CloseArea_body_exited"]
[connection signal="body_entered" from="DmgArea" to="." method="_on_DmgArea_body_entered"]
[connection signal="body_entered" from="PlayerFinder" to="." method="_on_PlayerFinder_body_entered"]
[connection signal="animation_finished" from="Animation" to="." method="_on_Animation_animation_finished"]
[connection signal="value_changed" from="HPBar" to="." method="_on_HPBar_value_changed"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]

[editable path="SoftCollision"]
